kubernetes/netshoot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netshoot
  namespace: default
  labels:
    app: netshoot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netshoot
  template:
    metadata:
      labels:
        app: netshoot
    spec:
      serviceAccountName: default
      containers:
        - name: netshoot
          image: nicolaka/netshoot
          command: ["/bin/bash"]
          args: ["-c", "while true; do ping localhost; sleep 60;done"]
