kubernetes/postgres.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: postgres
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: postgres
  name: postgres
  namespace: postgres
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      nodeSelector:
        "openebs.io/nodegroup": "storage-node"
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
              name: http
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 10
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 25m
              memory: 263M
            limits:
              cpu: 25m
              memory: 263M
          volumeMounts:
            - name: postgres-data-volume
              mountPath: /var/lib/postgresql/data
              readOnly: false
      volumes:
        - name: postgres-data-volume
          persistentVolumeClaim:
            claimName: postgres-data-claim
