kubernetes/git.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: git
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: gitea
  name: gitea-web
  namespace: git
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: gitea
---
# Redirect to https
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: git
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitea-web
  namespace: git
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`gitea.flight.kja.us`)
      kind: Rule
      middlewares:
        - name: https-redirect
          namespace: git
      services:
        - name: gitea-web
          namespace: git
          port: 3000
          kind: Service
          scheme: http
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: cgit
  name: cgit-web
  namespace: git
spec:
  ports:
    - port: 3001
      targetPort: 80
  selector:
    app: gitea
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cgit
  namespace: git
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`cgit.flight.kja.us`)
      kind: Rule
      middlewares:
        - name: https-redirect
          namespace: git
      services:
        - name: cgit-web
          namespace: git
          port: 3001
          kind: Service
          scheme: http
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: gitea
  name: gitea-ssh
  namespace: git
spec:
  ports:
    - port: 2022
      targetPort: 2022
  selector:
    app: gitea
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: gitea-ssh
  namespace: git
spec:
  entryPoints:
    - giteassh
  routes:
    - match: HostSNI(`*`)
      services:
        - name: gitea-ssh
          namespace: git
          port: 2022
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: git
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      nodeSelector:
        "openebs.io/nodegroup": "storage-node"
      containers:
        - name: cgit
          image: chruth/alpine-cgit
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 10
            timeoutSeconds: 10
          volumeMounts:
            - name: gitea-data-volume
              mountPath: /data
              readOnly: true
            - name: git-config-volume
              mountPath: /files/cgitrc
              subPath: cgitrc
              readOnly: false
            - name: git-config-volume
              mountPath: /files/nginx.conf
              subPath: nginx_conf
              readOnly: false
        - name: gitea
          image: gitea/gitea:1.17.3
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
            - containerPort: 2022
              name: ssh
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 3000
            # gitea takes a really long time to restart after an initalization (ORM & indexing)
            initialDelaySeconds: 120
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 25m
              memory: 263M
            limits:
              cpu: 25m
              memory: 263M
          volumeMounts:
            - name: gitea-data-volume
              mountPath: /data
              readOnly: false
      volumes:
        - name: gitea-data-volume
          persistentVolumeClaim:
            claimName: gitea-data-claim
        - name: git-config-volume
          configMap:
            items:
              - key:  config_cgitrc
                path: cgitrc
                mode: 0644
              - key:  config_nginx
                path: nginx_conf
                mode: 0644
            name: git-configmap
