kubernetes/prometheus.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: prometheus
  name: prometheus
  namespace: prometheus
spec:
  ports:
    - port: 80
      targetPort: 9090
  selector:
    app: prometheus
---
# Redirect to https
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: prometheus
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: prometheus
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`prometheus.flight.kja.us`)
      kind: Rule
      middlewares:
        - name: https-redirect
          namespace: prometheus
      services:
        - name: prometheus
          namespace: prometheus
          port: 9090
          kind: Service
          scheme: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      nodeSelector:
        "openebs.io/nodegroup": "storage-node"
      containers:
        - name: prometheus
          image: prom/prometheus
          ports:
            - containerPort: 9090
              name: http
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 9090
            initialDelaySeconds: 10
            timeoutSeconds: 10
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/
              readOnly: false
            - name: prometheus-data-volume
              mountPath: /data/
              readOnly: false
      volumes:
        - name: prometheus-data-volume
          persistentVolumeClaim:
            claimName: prometheus-data-claim
        - name: prometheus-config-volume
          configMap:
            defaultMode: 420
            name: prometheus-server-conf
