kubernetes/txwg.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: txwg
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: txwg
  name: txwg-transmission
  namespace: txwg
spec:
  ports:
    - port: 80
      targetPort: 9091
  selector:
    app: txwg
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: txwg
  name: txwg-commander
  namespace: txwg
spec:
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: txwg
---
# Redirect to https
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: txwg
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: txwg-transmission
  namespace: txwg
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`txwg.flight.kja.us`)
      kind: Rule
      middlewares:
        - name: https-redirect
          namespace: txwg
      services:
        - name: txwg-transmission
          namespace: txwg
          port: 80
          kind: Service
          scheme: http
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: txwg-commander
  namespace: txwg
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`txfiles.flight.kja.us`)
      kind: Rule
      middlewares:
        - name: https-redirect
          namespace: txwg
      services:
        - name: txwg-commander
          namespace: txwg
          port: 80
          kind: Service
          scheme: http
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: txwg
  namespace: txwg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: txwg
  template:
    metadata:
      labels:
        app: txwg
    spec:
      nodeSelector:
        "openebs.io/nodegroup": "storage-node"
      securityContext:
        sysctls:
          - name: net.ipv6.conf.all.disable_ipv6
            value: "0"
          - name: net.ipv4.conf.all.src_valid_mark
            value: "1"
      containers:
        - name: wireguard
          image: linuxserver/wireguard:version-v1.0.20210914
          ports:
            - containerPort: 9091
              name: http
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 9091
            initialDelaySeconds: 10
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 10m
              memory: 66M
            limits:
              cpu: 12m
              memory: 66M
          volumeMounts:
            - name: wireguard-config-volume
              mountPath: /config/wg0.conf
              subPath: wg0.conf
              readOnly: false
            - name: host-lib-modules-volume
              mountPath: /lib/modules
              readOnly: true
          securityContext:
            privileged: true
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
        - name: transmission
          image: linuxserver/transmission:version-3.00-r5
          resources:
            requests:
              cpu: 10m
              memory: 1645M
            limits:
              cpu: 70m
              memory: 1847M
          volumeMounts:
            - mountPath: /config
              name: host-txwg-volume
              subPath: config
              readOnly: false
            - mountPath: /downloads
              name: host-txwg-volume
              subPath: downloads
              readOnly: false
            - mountPath: /watch
              name: host-txwg-volume
              subPath: watch
              readOnly: false
      volumes:
        - name: wireguard-config-volume
          configMap:
            items:
              - key: wireguard_config_data
                path: wg0.conf
                mode: 0600
            name: wireguard-configmap
        - name: host-lib-modules-volume
          hostPath:
            path: /lib/modules
            type: Directory
        - name: host-txwg-volume
          persistentVolumeClaim:
            claimName: txwg-volume-claim
